<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:minHeight="120dp"
                android:minWidth="300dp">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_dialog_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_dialog_title"
        android:gravity="center"
        android:minHeight="70dp"
        android:padding="16dp"
        tools:text="@string/has_no_collect_hint"
        android:textColor="@color/textMainColor"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/tv_dialog_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/viewfinder_mask"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/tv_dialog_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_dialog_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/btn_confirm"
            android:textColor="@color/colorPrimary"/>

        <View
            android:layout_width="0.3dp"
            android:layout_height="30dp"
            android:background="@color/viewfinder_mask"/>

        <TextView
            android:id="@+id/tv_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/btn_cancel"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

</RelativeLayout>