<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/rl_scan_root"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SurfaceView
            android:id="@+id/scanner_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>

        <com.jaaaelu.gzw.neteasy.zxing.view.ViewfinderView
            android:id="@+id/viewfinder_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:corner_color="@android:color/white"
            app:frame_color="@color/viewfinder_frame"
            app:label_text="将条形码放入输入框内，即可自动扫描"
            app:label_text_color="@android:color/white"
            app:laser_color="@android:color/white"
            app:mask_color="@color/viewfinder_mask"
            app:result_color="@color/result_view"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <ImageButton
                android:id="@+id/ibtn_close_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/_bg"
                android:padding="12dp"
                android:src="@drawable/ic_close"/>

            <ImageButton
                android:id="@+id/ibtn_flash_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/_bg"
                android:padding="12dp"
                android:src="@drawable/ic_flash_on"/>

        </RelativeLayout>

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/rl_book_info"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_book_image"
            android:layout_width="45dp"
            android:layout_height="63dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            tools:src="@drawable/a"/>

        <TextView
            android:id="@+id/tv_book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="20dp"
            android:maxEms="12"
            android:singleLine="true"
            android:layout_toEndOf="@id/iv_book_image"
            android:textColor="@color/textMainColor"
            tools:text="极简宇宙史"/>

        <TextView
            android:id="@+id/tv_book_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_book_name"
            android:layout_marginStart="9dp"
            android:layout_marginTop="9dp"
            android:layout_toEndOf="@id/iv_book_image"
            android:maxEms="12"
            android:singleLine="true"
            android:textColor="@color/textsSecondColor"
            tools:text="作者: [法]克里斯托弗·加尔法德"/>

        <Button
            android:id="@+id/btn_collect_book"
            android:layout_width="80dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_with_radius_ripple"
            android:text="@string/collect_book"
            android:textColor="@android:color/white"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_not_found_book_hint"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/not_found_book"
        android:textColor="@color/textMainColor"
        android:visibility="gone"/>

</RelativeLayout>